# LearnOpenGL

./: .gitignore  CMakeLists.txt
src/: camera.h  glad.c  glad.h  main.cpp  mesh.h  model.h  shader.h
src/Exercices/advanced_lighting/Blinn-Phong/: main.cpp
src/Exercices/advanced_lighting/attenuation/: advanced_lighting.fs  main.cpp
src/Exercices/advanced_lighting/bloom/: main.cpp
src/Exercices/advanced_lighting/deferred_shading/: deferred_shading.fs  main.cpp
src/Exercices/advanced_lighting/deferred_shading_volumes/: g_buffer.fs  g_buffer.vs
src/Exercices/advanced_lighting/gamma_correction/: advanced_lighting.fs  main.cpp
src/Exercices/advanced_lighting/hdr/: main.cpp
src/Exercices/advanced_lighting/normal_mapping/: main.cpp  normal_mapping.vs
src/Exercices/advanced_lighting/normal_mapping_no_tangents/: main.cpp  normal_mapping.fs  normal_mapping.vs
src/Exercices/advanced_lighting/parallax_mapping_basic/: main.cpp
src/Exercices/advanced_lighting/parallax_occlusion_mapping/: main.cpp
src/Exercices/advanced_lighting/point_shadows/: main.cpp
src/Exercices/advanced_lighting/point_shadows_soft/: point_shadows.fs
src/Exercices/advanced_lighting/shadow_mapping/: main.cpp
src/Exercices/advanced_lighting/shadow_mapping_depth/: main.cpp
src/Exercices/advanced_lighting/ssao/: main.cpp
src/Exercices/in_progress/: main.cpp  shadow_mapping.fs
src/Exercices/model_loading/: camera.h  main.cpp  shader.h
src/shaders/: bloom.fs  normal+parallax_mapping.fs  point_shadows.fs  point_shadows_depth.gs  shader.vs  shadow_mapping.fs  simple.fs  simple.vs
(+94 files in other folders)
